--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -50,3 +50,7 @@ h1 {
 .documents-list .document .document-thumbnail {
   padding-left: 1rem;
 }
+
+.title-metadata-container {
+  overflow: auto;
+}
